--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run watch",
-    "build": "browserify src/entry.js -o public/bundle.js -t [ babelify ]",
-    "watch": "npm run build && open public/index.html; watchify src/entry.js -o public/bundle.js -t [ babelify ] -v",
+    "build": "browserify src/entry.js -o public/bundle.js -t [ babelify ] --debug",
+    "watch": "npm run build && open public/index.html; watchify src/entry.js -o public/bundle.js -t [ babelify ] -v --debug",
     "test": "ava --verbose && npm run lint",
     "lint": "eslint -c ./.eslintrc.yml \"./src/**/*.js\" \"./test/**/*.js\""
   },
@@ -33,7 +33,7 @@
       "es2015",
       "react"
     ],
-    "sourceMaps": "inline"
+    "sourceMaps": true
   },
   "ava": {
     "files": [
